# testlogicielcomptable

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
apps/api/: Dockerfile  main.py  pyproject.toml
apps/api/app/: config.py  database.py  models.py  schemas.py
apps/api/app/routers/: assistant.py  dashboard.py  ecritures.py  factures.py  immeubles.py  loyers.py  rapprochement.py
apps/api/app/services/: ia_service.py
apps/web/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(dashboard)/: layout.tsx  page.tsx
apps/web/src/app/(dashboard)/assistant/: page.tsx
apps/web/src/app/(dashboard)/factures/: page.tsx
apps/web/src/app/(dashboard)/loyers/: page.tsx
apps/web/src/app/(dashboard)/rapprochement/: page.tsx
apps/web/src/components/assistant/: AssistantChat.tsx
apps/web/src/components/dashboard/: DashboardKPIs.tsx  EncaissementChart.tsx  FacturesRecentes.tsx  LoyersRetard.tsx
apps/web/src/components/factures/: FacturesList.tsx  FacturesUpload.tsx
apps/web/src/components/layout/: Header.tsx  Sidebar.tsx
apps/web/src/components/loyers/: LoyersTable.tsx
apps/web/src/components/rapprochement/: RapprochementView.tsx
apps/web/src/components/ui/: StatusBadge.tsx
apps/web/src/lib/: api.ts  utils.ts
